# PI

./: README.md
1ano/LI1/: README.md
1ano/LI1/docs/: FileUtils.html  Tarefa1.html  Tarefa2.html  Tarefa4.html  Tarefa6.html  doc-index-B.html  doc-index-L.html  doc-index-S.html  doc-index-T.html  doc-index-W.html  index.html
1ano/LI1/src/: Datatype.hs  FileUtils.hs  Gloss.hs  Main.hs  Tarefa4.hs  Tarefa6.hs  Testes.hs
1ano/LI2/code/: calculosG1.h  funcoesMat.c  stack.c  stack.h
1ano/PF/Ficha 3/: Ficha3.hs
1ano/PF/Ficha 5/: Ficha5.hs
1ano/PF/Ficha 6/: Ficha6.hs
1ano/PF/Ficha 7/: Ficha7.hs
1ano/PF/Ficha 8/: Ficha8.hs
1ano/PF/Testes antigos/: Exame1617.hs  Exame1718.hs
1ano/PI/Ficha 3/: Ficha3.c
1ano/PI/Ficha 5/: Ficha5.c
1ano/PI/Ficha 6/: Ficha6.c
1ano/PI/Ficha 7/: Ficha7.c
1ano/PI/Ficha 9/: Ficha9.c
2ano/LI3/: README.md
2ano/LI3/guiao-1/: Makefile
2ano/LI3/guiao-2/: Makefile
2ano/POO/aula/: Aluno.java  ExercicioFor.java  Ponto.java
2ano/POO/aula1/: Ficha1.java  Funcs.java  OlaMundo.java
2ano/POO/aula3/: Circulo.java
2ano/POO/ficha1/: Exercicio1.java
2ano/POO/ficha3/: Ficha3.java  Telemovel.java  Youtube.java
2ano/POO/ficha4/: Lampada.java  main.java
2ano/POO/ficha5/: Encomenda.java
2ano/POO/ficha6/: User.java
2ano/SO/guiao1/: ex4.c  hi.txt  me.txt  mycat.c  myln.c  nl.c  rl.c  rl.h  sol.c
2ano/SO/guiao2/: ex1.c  (+5 more)
3ano/ADI-Project/: README.md
3ano/CC-Project/: CC-tp2.imn  README.md  Servidores_de_topo.txt
3ano/CG-Project/: .gitignore  plane.cpp
3ano/CG-Project/Fase4/: CMakeLists.txt
3ano/CG-Project/Fase4/src/Engine/: catmull-rom.cpp  engine.cpp  world.cpp  world.hpp
3ano/CG-Project/Fase4/src/Generator/: bezier.cpp  bezier.hpp  calcPoints.cpp  calcPoints.hpp  generator.cpp
3ano/CG-Project/Fase4/src/Utils/: utils.cpp  utils.hpp
3ano/CG-Project/Fase4/tests/test_files_phase_1/: test_1_5.xml
3ano/CG-Project/Fase4/tests/test_files_phase_2/: solar_system.xml
3ano/CG-Project/Fase4/tests/test_files_phase_3/: solar_system.xml
3ano/CG-Project/Fase4/tests/test_files_phase_4/: solar_system.xml  solarsystem.xml
3ano/DSS-Project/: TO DO.md
3ano/EW-Project/: .gitignore  README.md  data_process.py  fake_posts.py  instrucoes.txt  package-lock.json
3ano/LI4-Project/: README.MD
3ano/PL-Project/: GIC.txt  parser.out
4ano/ASCN-Project/: .gitignore  Monitoring.json  README.md  laravelio-deploy.yml  laravelio-undeploy.yml  myTest.jmx  test.jmx  test2.jmx
4ano/DAA-Project/: DATASET-COMP.ipynb  DATASET-GRUPO.ipynb  api.csv  results.csv
4ano/RAS-Project/: README.md
Ficha1/: Ficha1.c  a.out
LI1/: README.md
LI1/docs/: Datatype.html  Hextuple.html  Main.html  Tarefa3.html  Tarefa5.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-U.html  doc-index-Y.html
LI1/src/: Hextuple.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs  Tarefa5.hs
LI2/: README.md
LI2/code/: calculosG1.c  funcoesMat.h  guiao1.c
LI3/guiao-3/: Makefile
PF/50Q/: 50Q.hs
PF/Ficha 1/: Ficha1.hs
PF/Ficha 2/: Ficha2.hs
PF/Ficha 4/: Ficha4.hs
PF/Ficha 9/: Ficha9.hs
PF/Testes antigos/: Exame1819.hs  Teste1617.hs  Teste1718.hs  Teste1819.hs  Teste1920.hs
PI/Ficha 10/: Ficha10.c
PI/Ficha 2/: Ficha2.c
PI/Ficha 4/: Ficha4.c
PI/Ficha 5/: Ficha5.c
POO/aula/: Circulo.java  ColCirculo.java  ComparadorAlunos.java  Turma.java  TurmaMap.java
POO/aula1/: Diadasemana.java
POO/aula2/: Funcs.java
POO/ficha1/: SomaDatas.java
POO/ficha2/: Ficha2.java
POO/ficha4/: CasaInteligente.java
POO/ficha6/: fase1.java
SO/guiao-1/: Makefile  ex5  ex6  myln  readln.c
SO/guiao-2/: a.out  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4.c
SO/guiao1/: MAKEFILEex6  ex1.c  ex2.c  ex3.c  ex5.c  ex6.c  mycp.c  person.c  person.h
SO/guiao2/: ex1.c  ex4.c  ex5.c  ex6.c
SO/guiao3/: ex1  ex2  ex3.c  ex4.c  file.x
SO/guiao4/: ex1  ex1.c  ex2  ex2.c  ex3.c  ex4.c
SO/guiao5/: ex2.c  ex4.c
SO/treino/: mycat.c
(+414 files in other folders)
